--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -23,9 +23,7 @@
                 </tr>
                 </table>
 
-                <button type="submit">
-                    <a href="{% url 'home' %}"> login </a>
-                </button>
+                <input type="submit" value="login">
                 <input type="hidden" name="next" value="{{ next }}">
                 </form>
             </div>
