--- a/receipts/templates/receipts/list.html
+++ b/receipts/templates/receipts/list.html
@@ -9,6 +9,7 @@
     <body>
         <main>
             <h1> My Receipts </h1>
+            <a href="{% url 'logout' %}"> Logout </a>
             <table>
                 <tr>
                     <th>Vendor</th>
