--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -1,13 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
-    </head>
-    <body>
-        <main>
+{% extends 'base.html' %}
+
+{% block title %} Login {% endblock %}
+
+            {% block content %}
             <div>
                 <h1> Login </h1>
                 <form method="POST" action="{% url 'login' %}">
@@ -27,6 +22,7 @@
                 <input type="hidden" name="next" value="{{ next }}">
                 </form>
             </div>
+            {% endblock %}
         </main>
     </body>
 </html>
