--- a/receipts/templates/receipts/list.html
+++ b/receipts/templates/receipts/list.html
@@ -1,15 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
-    </head>
-    <body>
-        <main>
+{% extends 'base.html' %}
+
+{%block title%} Recipt List {%endblock%}
+
+{% block content %}
             <h1> My Receipts </h1>
-            <a href="{% url 'logout' %}"> Logout </a>
             <table>
                 <tr>
                     <th>Vendor</th>
@@ -31,6 +25,4 @@
                     <tr>
                 {% endfor %}
             </table>
-        </main>
-    </body>
-</html>
+{% endblock %}
