--- a/accounts/templates/base.html
+++ b/accounts/templates/base.html
@@ -13,6 +13,9 @@
                         <li>
                             <a href="{% url 'logout' %}">Logout</a></p>
                         </li>
+                        <li>
+                            <a href="{% url 'home' %}">Home</a>
+                        </li>
                     {% else %}
                         <p>You are not logged in</p>
                         <li>
