--- a/accounts/templates/base.html
+++ b/accounts/templates/base.html
@@ -16,6 +16,21 @@
                         <li>
                             <a href="{% url 'home' %}">Home</a>
                         </li>
+                        <li>
+                            <a href="{% url 'expensecategory_list' %}">Categories List</a>
+                        </li>
+                        <li>
+                            <a href="{% url 'account_list' %}">Accounts List</a>
+                        </li>
+                        <li>
+                            <a href="{% url 'create_receipt' %}">Create Receipt</a>
+                        </li>
+                        <li>
+                            <a href="{% url 'create_category' %}">Create Category</a>
+                        </li>
+                        <li>
+                            <a href="{% url 'create_account' %}">Create Account</a>
+                        </li>
                     {% else %}
                         <p>You are not logged in</p>
                         <li>
