--- a/receipts/templates/receipts/create.html
+++ b/receipts/templates/receipts/create.html
@@ -1,13 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
-    </head>
-    <body>
-        <main>
+{% extends 'base.html' %}
+
+{% block content %}
             <div>
                 <h1>Create Receipt</h1>
                 <form method="POST" enctype="multipart/form-data">
@@ -22,6 +15,4 @@
                     </button>
                 </form>
             </div>
-        </main>
-    </body>
-</html>
+{% endblock %}
