--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -18,7 +18,9 @@
                 </tr>
                 </table>
 
-                <input type="submit" value="login">
+                <button type="submit">
+                Login
+                </button>
                 <input type="hidden" name="next" value="{{ next }}">
                 </form>
             </div>
